[package]
name = "mediaserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mediaserver"
path = "src/main.rs"

[dependencies]
# SQLite — хранение индекса файлов (что уже принято, хеши) и пользователей
rusqlite = { version = "0.31", features = ["bundled"] }

# Логирование
log = "0.4"
env_logger = "0.11"

# SHA-256 для верификации файлов и HMAC
sha2 = "0.10"
hex = "0.4"

# HMAC для challenge-response аутентификации
hmac = "0.12"
rand = "0.8"

# Argon2id для хеширования паролей
argon2 = { version = "0.5", features = ["alloc"] }

# Сериализация конфига (config.toml)
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# HTTP-эндпоинт админки
tiny_http = "0.12"
serde_json = "1"

[profile.release]
opt-level = 3
strip = true
